# 3R_All_in_One

./: .coverage  .dockerignore  .gitignore  AGENT_HANDOFF.md  CHANGELOG.md  Dockerfile  HANDOFF_PROMPT.txt  README.md  docker-compose.yml  playwright.config.ts  pyproject.toml  requirements.txt  tools_build_opening_report_docx.py  tools_compact_opening_report_docx.py  开题报告--冯梓泰.docx
.claude/: settings.local.json
agent/: __init__.py  __main__.py  cli.py  env_builder.py  experiment_agent.py  health_doctor.py  registry.py  schema_validator.py  smoke_runner.py
agent/model_specs/: SCHEMA.md  align3r.yaml  cut3r.yaml  dream3r.yaml  dust3r.yaml  fast3r.yaml  mast3r.yaml  monst3r.yaml  spann3r.yaml
backend/: advisor.py  app.py  development_store.py  experiment_orchestrator.py  experiment_record.py  job_scheduler.py  job_store.py  logging_config.py  metrics_calculator.py  model_contracts.py  model_registry.py  param_templates.py  report_exporter.py  requirements.txt  resource_monitor.py  retry_policy.py  runner_base.py  runtime_paths.py  scene_meta.py  server_profiles.py  ssh_runner.py  state_reconciler.py  storage_config.py  storage_manager.py  viser_manager.py  visual_artifacts.py
backend/runners/: __init__.py  online_api.py  ssh.py
client/: README.md  debug_job.cjs  index.html  package-lock.json  package.json  vite.config.ts
client/src/: AdvisorWorkbench.tsx  AgentWorkbench.tsx  App.tsx  CommandBar.tsx  CompareBoard.tsx  CompareCharts.tsx  DashboardPanel.tsx  DevelopmentCyclePanel.tsx  Dream3rParamForm.tsx  DynamicParamForm.tsx  EvaluationPanel.tsx  ExperimentWorkbench.tsx  InspectWorkspace.tsx  JobDetail.tsx  ModelRoadmapPanel.tsx  ParamTemplates.tsx  PointCloudViewer.tsx  QueueWorkspace.tsx  ResearchAccelerationPanel.tsx  ResourceMonitor.tsx  RunnerSelector.tsx  SampleMatrixPanel.tsx  Sidebar.tsx  StoragePanel.tsx  SummaryPanel.tsx  SystemWorkbench.tsx  ViserPanel.tsx  appConfig.ts  compareHelpers.ts  deploymentHelpers.ts  displayHelpers.ts  fileHelpers.ts  jobInspectorHelpers.tsx  sampleMatrixHelpers.ts  styles.css  types.ts  uiPrimitives.tsx  uploadProgress.ts  workflowHelpers.ts  workspaceTypes.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  main.rs
demo_assets/eth3d_delivery_area_demo/: README.md  manifest.json
docs/: DOCKER_DEPLOYMENT.md  Dream3R与3R-All-in-One视频录制脚本.md  E2E_TESTING.md  ROADMAP.md  agent-guide.md  api-reference.md  architecture.md  ch4-final.txt  ch4-structure-check.txt  current-report-extracted.txt  current-report-with-styles.txt  deployment.md  final-defense-ppt-plan.md  final-report-demo-plan.md  final-spot-check.txt  full-final-dump.txt  model-integration.md  opening-report-jbw.txt  rewritten-report-dump.txt
e2e/: app.spec.ts
runners/: align3r_runner.py  cut3r_runner.py  dream3r_runner.py  dust3r_runner.py  fast3r_runner.py  mast3r_runner.py  monst3r_runner.py  spann3r_runner.py
samples/: samples_manifest.json
tests/: __init__.py  conftest.py  test_dream3r_runner.py
tests/agent/: test_cli.py  test_health_doctor.py  test_registry.py  test_schema_validator.py
tests/backend/: test_advisor_models.py  test_agent_checks.py  test_api_endpoints.py  test_job_store.py  (+10 more)
tmp/: _finalize.py  _pack_build.py  build_exe.py  smoke.py
tools/: 3r_backend.spec  build_backend.ps1  dump_report_index.py  embed_figures.py  extract_report.py  optimize_report.py  release_check.py  rewrite_report.py  run_backend.py
(+7 files in other folders)
