[project]
name = "3r-all-in-one"
version = "0.4.0"
description = "3R Model Aggregation Platform - One-click environment setup, execution, and evaluation"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "KYKT", email = "kykt@example.com" }
]
requires-python = ">=3.11"
keywords = ["3d-reconstruction", "dust3r", "mast3r", "monst3r", "computer-vision", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "paramiko>=3.0.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML",
    "types-paramiko",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
3r-agent = "agent.cli:main"
3r-backend = "backend.app:main"

[project.urls]
Homepage = "https://github.com/kykt/3R_All_in_One"
Documentation = "https://github.com/kykt/3R_All_in_One#readme"
Repository = "https://github.com/kykt/3R_All_in_One"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent*", "backend*", "runners*"]

[tool.setuptools.package-data]
"agent" = ["model_specs/*.yaml", "model_specs/*.md"]

# ─────────────── Ruff ───────────────

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["agent", "backend", "runners"]

# ─────────────── Black ───────────────

[tool.black]
line-length = 100
target-version = ["py311"]

# ─────────────── Mypy ───────────────

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["paramiko.*", "yaml.*"]
ignore_missing_imports = true

# ─────────────── Pytest ───────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
