[package]
name = "kykt_vision_client"
version = "0.5.0"
description = "3R All-in-One - Desktop client for 3D reconstruction models"
authors = ["kykt"]
edition = "2021"

[lib]
name = "kykt_vision_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["devtools"] }
